# dkod-engine

./: .gitignore  Cargo.toml  README.md
.claude/: settings.json
.claude/hooks/: clippy-check-post-edit.sh  lsp-check-post-edit.sh
.github/workflows/: ci.yml
baml_client_ts/: README.md  async_client.ts  async_request.ts  index.ts  inlinedbaml.ts  package.json  parser.ts  partial_types.ts  sync_client.ts  sync_request.ts  type_builder.ts  types.ts
baml_src/: agents.baml  clients.baml  generators.baml
crates/dk-agent-sdk/: Cargo.toml
crates/dk-agent-sdk/src/: lib.rs  session.rs  tools.rs  types.rs
crates/dk-agent-sdk/tests/: workflow_test.rs
crates/dk-analytics/: Cargo.toml
crates/dk-analytics/src/: client.rs  events.rs  global.rs  lib.rs  materialized_views.sql  pytorch_bridge.rs  queries.rs  schema.rs  schema.sql  sink.rs
crates/dk-analytics/src/queries/: summary_avg_verification_ms.sql  summary_merged_count.sql  summary_review_verdicts.sql
crates/dk-cli/: Cargo.toml  build.rs
crates/dk-cli/src/: auth.rs  client.rs  config.rs  grpc.rs  main.rs  session.rs
crates/dk-cli/src/commands/: admin.rs  agent.rs  analytics.rs  cat.rs  check.rs  commit.rs  context.rs  device_login.rs  files.rs  index.rs  log.rs  login.rs  mod.rs  search.rs  session_add.rs  session_commit.rs  session_push.rs  session_search.rs  session_status.rs
crates/dk-cli/tests/integration/: add_test.rs  branch_test.rs  clone_test.rs  commit_test.rs  diff_test.rs  init_test.rs  log_test.rs  push_pull_test.rs  remote_test.rs  status_test.rs  workflow_test.rs
crates/dk-core/: Cargo.toml
crates/dk-core/src/: lib.rs
crates/dk-embedded-ch/: Cargo.toml
crates/dk-embedded-ch/src/: lib.rs
crates/dk-embedded-ch/tests/: integration.rs
crates/dk-embedded-ch/tests/fixtures/: logs.csv
crates/dk-engine/: Cargo.toml
crates/dk-engine/migrations/: 014_symbol_fk_on_update_cascade.sql  015_ai_reviews.sql  015_changeset_parent_changeset_id.sql  016_workspaces_stranded_at.sql  017_session_workspaces_changeset_id.sql  018_superseded_by_drop_fk.sql  019_backfill_session_workspaces_changeset_id.sql  020_session_resume_redirects.sql
crates/dk-engine/src/: changeset.rs  lib.rs  metrics.rs  pipeline.rs  repo.rs  storage.rs  tool_ops.rs
crates/dk-engine/src/conflict/: ast_merge.rs  claim_tracker.rs  mod.rs  payload.rs  valkey_claim_tracker.rs
crates/dk-engine/src/git/: objects.rs  repository.rs
crates/dk-engine/src/graph/: callgraph.rs  depgraph.rs  index.rs  mod.rs  symbols.rs  types.rs
crates/dk-engine/src/parser/: engine.rs  lang_config.rs  python_parser.rs  registry.rs  typescript_parser.rs
crates/dk-engine/src/parser/langs/: bash.rs  haskell.rs  julia.rs  kotlin.rs  mod.rs  python.rs  scala.rs  typescript.rs
crates/dk-engine/src/parser/queries/: bash_calls.scm  bash_imports.scm  bash_symbols.scm  haskell_calls.scm  haskell_imports.scm  haskell_symbols.scm  julia_calls.scm  julia_imports.scm  julia_symbols.scm  kotlin_calls.scm  kotlin_imports.scm  kotlin_symbols.scm  scala_calls.scm  scala_imports.scm  scala_symbols.scm
crates/dk-engine/src/workspace/: cache.rs  conflict.rs  event_bus.rs  merge.rs  mod.rs  overlay.rs  session_graph.rs  session_manager.rs  session_workspace.rs  valkey_cache.rs
crates/dk-engine/tests/: ast_merge_test.rs  graph_symbols_test.rs  haskell_parser_test.rs  integration.rs  julia_parser_test.rs  kotlin_parser_test.rs
crates/dk-engine/tests/integration/: ast_merge_test.rs  bash_parser_test.rs  changeset_state_test.rs  conflict_claim_test.rs  conflict_payload_test.rs  cpp_parser_test.rs  csharp_parser_test.rs  eviction_recovery_test.rs  git_test.rs  go_parser_test.rs  graph_callgraph_test.rs  graph_symbols_test.rs  haskell_parser_test.rs  java_parser_test.rs  julia_parser_test.rs  kotlin_parser_test.rs  nsi_git_ops_test.rs  nsi_merge_test.rs  nsi_workspace_test.rs  parser_registry_test.rs  php_parser_test.rs  python_parser_test.rs  repo_test.rs  ruby_parser_test.rs  rust_parser_test.rs  scala_parser_test.rs  search_index_test.rs  session_gc_test.rs  session_graph_serde_test.rs  swift_parser_test.rs  ts_parser_test.rs  valkey_cache_test.rs  workspace_cache_test.rs
crates/dk-mcp/: Cargo.toml  build.rs  registry.toml
crates/dk-mcp/src/: auth.rs  gateway.rs  grpc.rs  lib.rs  main.rs  registry.rs  retry.rs  review_gate.rs  review_gate_mock.rs  server.rs  state.rs
crates/dk-mcp/tests/: e2e_test.rs  retry_test.rs  server_test.rs
crates/dk-protocol/: Cargo.toml  build.rs
crates/dk-protocol/proto/dkod/v1/: agent.proto
crates/dk-protocol/src/: abandon.rs  approve.rs  auth.rs  close.rs  connect.rs  context.rs  events.rs  file_list.rs  file_read.rs  file_write.rs  lib.rs  merge.rs  metrics.rs  pre_submit.rs  push.rs  record_review.rs  require_live_session.rs  resolve.rs  review.rs  server.rs  session.rs  session_redis.rs  session_status.rs  stale_overlay.rs  submit.rs  verify.rs  watch.rs
crates/dk-protocol/tests/: agent_name_test.rs  approve_proto_test.rs  session_test.rs  submit_overlay_test.rs  submit_releases_lock_test.rs
crates/dk-runner/: Cargo.toml
crates/dk-runner/src/: changeset.rs  lib.rs  runner.rs  scheduler.rs
crates/dk-runner/src/executor/: container.rs  mod.rs  process.rs
crates/dk-runner/src/steps/: command.rs  mod.rs
crates/dk-runner/src/steps/agent_review/: claude.rs  claude_tooluse.rs  mod.rs  openrouter.rs  parse.rs  provider.rs
crates/dk-runner/src/steps/human_approve/: mod.rs
crates/dk-runner/src/steps/llm_judge/: mod.rs
crates/dk-runner/src/steps/pytorch_ci/: client.rs  mod.rs  sharding.rs
crates/dk-runner/src/steps/semantic/: compat.rs  mod.rs  quality.rs  safety.rs
crates/dk-runner/src/workflow/: parser.rs  types.rs  validator.rs
crates/dk-runner/tests/: workflow_test.rs
crates/dk-server/src/: main.rs
crates/dk-server/tests/: agent_flow_test.rs
crates/dk-spike/: Cargo.toml  README.md
crates/dk-spike/src/: lib.rs
crates/dk-supabase/: Cargo.toml
crates/dk-supabase/src/: lib.rs
docs/plans/: 2026-04-17-release-locks-at-submit-and-stacked-changesets.md
scripts/: baml-generate.sh
sdk/: dkod-tools.json
(+7 files in other folders)
