[package]
name = "dk-cli"
version.workspace = true
edition.workspace = true
description = "dkod CLI — agent-native code platform"
license.workspace = true
repository.workspace = true
homepage = "https://dkod.io"
keywords = ["ai", "agents", "code", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "dk"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
gix = { version = "0.79", features = ["max-performance", "blocking-network-client"] }
clap = { version = "4", features = ["derive", "env"] }
colored = "3"
toml = "0.8"
serde.workspace = true
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde_json = "1"
dirs = "6"
open = "5"
ignore = "0.4"
urlencoding = "2"
walkdir = "2"
rpassword = "7"
uuid.workspace = true
dk-agent-sdk.workspace = true
dk-protocol.workspace = true
tokio = { version = "1", features = ["rt-multi-thread"] }
tokio-stream = "0.1"
tonic = { version = "0.12", features = ["transport", "tls", "tls-webpki-roots"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
