[package]
name = "dk-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "Core types and traits for the dkod code platform"
homepage = "https://dkod.io"
keywords = ["ai", "agents", "code"]
categories = ["development-tools"]

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
sqlx.workspace = true
