[package]
name = "dk-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "dkod gRPC protocol definitions and server/client implementations"
homepage = "https://dkod.io"
keywords = ["ai", "agents", "grpc", "protocol"]
categories = ["development-tools"]

[dependencies]
dk-core.workspace = true
dk-engine.workspace = true
sqlx.workspace = true
dk-runner.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
dashmap = "6"
tonic = "0.12"
prost = "0.13"
tokio-stream = "0.1"
serde.workspace = true
serde_json.workspace = true
jsonwebtoken.workspace = true
async-trait.workspace = true
chrono.workspace = true
redis = { workspace = true, optional = true }
dk-analytics = { workspace = true }

[features]
default = []
redis = ["dep:redis"]

[build-dependencies]
tonic-build = "0.12"
