[package]
name = "dk-runner"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "dkod verification runner — CI/CD pipeline execution"
homepage = "https://dkod.io"
keywords = ["ai", "agents", "code", "ci"]
categories = ["development-tools"]

[dependencies]
dk-core.workspace = true
dk-engine.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
async-trait.workspace = true
toml = "0.8"
serde_yml.workspace = true
futures = "0.3"
tempfile = "3"
regex = "1"
reqwest = { version = "0.12", features = ["json"] }
chrono = { workspace = true }
dk-analytics = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
serial_test = "3"
