[package]
name = "dk-spike"
version = "0.0.0"
edition = "2021"
license = "MIT"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
# Spike deps - each gets probed individually in tests below.
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Triage candidates (see src/lib.rs for notes).
octocrab = "0.49"
enum_dispatch = "0.3"
typetag = "0.2"
tracing-core = "0.1"
genai = "0.5.3"
langfuse-sdk = "0.1.1"
rmcp-macros = "1.5.0"
connectrpc = { version = "0.3.2", features = ["client"] }
buffa = { version = "0.3.0", features = ["json"] }
buffa-types = { version = "0.3.0", features = ["json"] }
swiftide = "0.32.1"
dspy-rs = "0.7.3"
baml = "0.221.0"
chdb-rust = { git = "https://github.com/chdb-io/chdb-rust", version = "1.3.1" }
# NOTE: other crates (genai/swiftide/dspy-rs/baml/langfuse/connectrpc/rmcp-macros)
# are evaluated separately via `cargo add` + report - not all cohabitate cleanly.
